9th commit about 90% done just need to fix the headers and re align the text

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -17,7 +17,7 @@
     justify-content: flex-end;
     align-items: end;
     height: 200px; */
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 #Project1 {
@@ -64,12 +64,25 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    outline: 1px solid blue;
+    /* outline: 1px solid blue; */
+    justify-content: space-between;
+}
+
+.row2  {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    /* outline: 1px solid blue; */
     justify-content: space-between;
 }
 
 .row a {
-    width: 50%;
+    width: 100%;
+    
+}
+
+.row2 a {
+    width: 100%;
 }
 
 p {
